// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should behave correctly when simplest usage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px transparent;
  border: 1px solid;
  border-color: #A6B5BB;
}

.c3 {
  color: #69788C;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: -0.5625rem;
  color: #455A73;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
  </label>
</div>
`;

exports[`Input should behave correctly when with "money" mask 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: 0;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
  </label>
</div>
`;

exports[`Input should behave correctly when with error text 1`] = `
.c9 {
  -webkit-mask-image: none;
  mask-image: none;
  background-color: transparent;
  background-image: url("https://qa-static.cashme.com.br/icons/error.svg");
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 88px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #D93E3E3D;
  border: 1px solid;
  border-color: #D93E3EA3;
}

.c3 {
  color: #B33333;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 1rem;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B33333;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  line-height: 1rem;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: -0.5625rem;
  color: #455A73;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

.c8 {
  grid-area: icon;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
    <div
      class="c7 c8"
    >
      <div
        aria-hidden="true"
        aria-label=""
        class="c9"
        data-testid="Icon"
      />
    </div>
  </label>
  <div
    aria-live="assertive"
    class="c10"
  >
    error message
  </div>
</div>
`;

exports[`Input should behave correctly when with helper text 1`] = `
.c8 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/attention-small.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/attention-small.svg);
  background-color: #455A73;
  background-image: none;
  background-size: 12px;
  width: 12px;
  height: 12px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 12px;
  mask-size: 12px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 88px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px transparent;
  border: 1px solid;
  border-color: #A6B5BB;
}

.c3 {
  color: #69788C;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 1rem;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #455A73;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  line-height: 1rem;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: -0.5625rem;
  color: #455A73;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
  </label>
  <div
    aria-live="polite"
    class="c7"
  >
    <div
      aria-hidden="true"
      aria-label=""
      class="c8"
      data-testid="Icon"
    />
    lorem ipsum
  </div>
</div>
`;

exports[`Input should behave correctly when with icon 1`] = `
.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/user.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/user.svg);
  background-color: #003FF2;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: 0;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

.c8 {
  grid-area: icon;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
    <div
      class="c7 c8"
    >
      <div
        aria-hidden="true"
        aria-label=""
        class="c9"
        data-testid="Icon"
      />
    </div>
  </label>
</div>
`;

exports[`Input should behave correctly when with icon action 1`] = `
.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/user.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/user.svg);
  background-color: #003FF2;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: 0;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

.c8 {
  grid-area: icon;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
    <button
      class="c7 c8"
      type="button"
    >
      <div
        aria-hidden="true"
        aria-label=""
        class="c9"
        data-testid="Icon"
      />
    </button>
  </label>
</div>
`;

exports[`Input should behave correctly when with loading status 1`] = `
.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/loader.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/loader.svg);
  background-color: #003FF2;
  background-image: none;
  background-size: 24px;
  -webkit-animation: ihNAGT 3s linear infinite;
  animation: ihNAGT 3s linear infinite;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: -0.5625rem;
  color: #455A73;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

.c8 {
  grid-area: icon;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
    <div
      class="c7 c8"
    >
      <div
        aria-hidden="true"
        aria-label=""
        class="c9"
        data-testid="Icon"
      />
    </div>
  </label>
</div>
`;

exports[`Input should behave correctly when with mask 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: 0;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
  </label>
</div>
`;

exports[`Input should behave correctly when with success status 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px transparent;
  border: 1px solid;
  border-color: #A6B5BB;
}

.c3 {
  color: #69788C;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: -0.5625rem;
  color: #455A73;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
  </label>
</div>
`;

exports[`Input should behave correctly when with two masks 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
}

.c4 {
  position: relative;
  bottom: 0;
  grid-area: label;
}

.c6 {
  grid-area: input;
}

<div
  class="c0"
  data-testid="Input"
>
  <label
    class="c1 c2"
    data-testid="InputWrapper"
  >
    <span
      class="c3 c4"
      for="test"
    >
      test label
    </span>
    <input
      class="c5 c6"
      data-testid="Real-Input"
      id="test"
      name="test"
      type="text"
    />
  </label>
</div>
`;
